--- a/css/styles.css
+++ b/css/styles.css
@@ -125,15 +125,15 @@ body {
 
 main {
     /*Définition de la taille de la page*/
-    min-width: 1000px;
     width: 1240px;
+    height: 1653px;
     margin: 35px;
     /*Mise en page (ombre autour du container, légère bordure pour améliorer la discernation de l'élément, coins arrondis)*/
     box-shadow: 0px 0px 30px var(--clear-white);
     border-radius: 5px;
     color: aliceblue;
     display: grid;
-    grid-template-rows: 250px 22.5%;
+    grid-template-rows: 250px 1fr;
     gap: 3rem;
     padding-bottom: 3.5rem;
 }
@@ -145,7 +145,7 @@ header {
     font-family: "SF Pro Semibold";
     box-shadow: 0px 20px 18px -9px black;
     display: grid;
-    grid-template-columns: minmax(275px, 22.5%) 55% 22.5%;
+    grid-template-columns: 275px 690px 275px;
 }
 
 
@@ -212,7 +212,7 @@ header #contact-content li:nth-of-type(even) {
 
 #under-header {
     display: grid;  
-    grid-template-columns: 22.5% 55% 22.5%;
+    grid-template-columns: 275px 690px 275px;
 }
 
 
